--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
----
 version: '3'
 services:
   apt-cacher-ng:
@@ -8,6 +7,7 @@ services:
     - "3142:3142"
     volumes:
     - apt-cacher-ng:/var/cache/apt-cacher-ng
+    - ./config:/etc/apt-cacher-ng/acng.conf
     restart: always
 volumes:
   apt-cacher-ng:
